[package]
name = "rocket-basicauth"
description = "A high-level basic access authentication request guard for Rocket.rs"
version = "1.0.0"
readme = "README.md"
license = "MIT"
keywords = ["web", "rocket", "auth", "basic-auth", "authentication"]
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"

[dependencies]
base64 = "0.13"
rocket = "0.4.5"
